--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: python
 python:
-  - "3.6"
+  - "3.8"
 install:
   - pip install -e .
-  - pip install codecov pytest-cov
-script:
-  - pytest --cov=src test
-after_success:
-  - codecov
+  - python post_install.py
